src/objects/ADvendio__OptimizingVersion__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__CancelationType__c</fullName>
        <label>Cancelation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation standard</fullName>
                </value>
                <value>
                    <fullName>Cancellation and merge periods</fullName>
                </value>
                <value>
                    <fullName>Cancellation and merge all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Comment__c</fullName>
        <description>Some additional comments</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__DateOfActivation__c</fullName>
        <description>Shows the date / time when the Optimizing Version was activated.</description>
        <inlineHelpText>Shows the date / time when the Optimizing Version was activated.</inlineHelpText>
        <label>Date Of Activation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountB1__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (B1) and optimized Delta Amount (B1).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (B1) and optimized Delta Amount (B1).</inlineHelpText>
        <label>Delta Amount (B1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountB2__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (B2) and optimized Delta Amount (B2).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (B2) and optimized Delta Amount (B2).</inlineHelpText>
        <label>Delta Amount (B2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountB3__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (B3) and optimized Delta Amount (B3).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (B3) and optimized Delta Amount (B3).</inlineHelpText>
        <label>Delta Amount (B3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountN1__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (N1) and optimized Delta Amount (N1).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (N1) and optimized Delta Amount (N1).</inlineHelpText>
        <label>Delta Amount (N1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountN2__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (N2) and optimized Delta Amount (N2).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (N2) and optimized Delta Amount (N2).</inlineHelpText>
        <label>Delta Amount (N2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__DeltaAmountN3__c</fullName>
        <description>Shows the difference between the original Media Campaign Delta Amount (N3) and optimized Delta Amount (N3).</description>
        <inlineHelpText>Shows the difference between the original Media Campaign Delta Amount (N3) and optimized Delta Amount (N3).</inlineHelpText>
        <label>Delta Amount (N3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__InternalComment__c</fullName>
        <description>Please enter your internal comment for this Optimizer Version. It will not be shown on any document.</description>
        <inlineHelpText>Please enter your internal comment for this Optimizer Version. It will not be shown on any document.</inlineHelpText>
        <label>Internal Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__MediaCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>OptimizingVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Reason__c</fullName>
        <label>Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHIFT: Fehlende WM</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Fehlerhafte WM</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Budgetshift</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Laufzeitverschiebung</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Tech. Probleme</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Produktwechsel</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Falsche Prognose</fullName>
                </value>
                <value>
                    <fullName>SHIFT: Fehlerhafte Kampagnenanlage</fullName>
                </value>
                <value>
                    <fullName>STORNO: Fehlende WM</fullName>
                </value>
                <value>
                    <fullName>STORNO: Fehlerhafte WM</fullName>
                </value>
                <value>
                    <fullName>STORNO: Budgetcut</fullName>
                </value>
                <value>
                    <fullName>STORNO: Performance</fullName>
                </value>
                <value>
                    <fullName>STORNO: Bad-News/einstweilliger Verfügung</fullName>
                </value>
                <value>
                    <fullName>STORNO: Falsche Prognose</fullName>
                </value>
                <value>
                    <fullName>STORNO: Tech. Probleme</fullName>
                </value>
                <value>
                    <fullName>STORNO: Fehler Kampagnenanlage</fullName>
                </value>
                <value>
                    <fullName>STORNO: Rabatt-Anpassung</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL: Anpassung Kriterien</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL: Kompensation</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL: Nachlieferung</fullName>
                </value>
                <value>
                    <fullName>NEUTRAL: Produktwechsel</fullName>
                </value>
                <value>
                    <fullName>ZUBUCHUNG: Proaktiv</fullName>
                </value>
                <value>
                    <fullName>ZUBUCHUNG: Kundenwunsch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SelectedOriginalItems__c</fullName>
        <description>Contains a list of all Campaign Items which were selected when creating the Optimizer Version. This field is used and set by the Comercial Optimizer.</description>
        <inlineHelpText>Contains a list of all Campaign Items which were selected when creating the Optimizer Version. This field is used and set by the Comercial Optimizer.</inlineHelpText>
        <label>Selected Original Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proactive</fullName>
                    <default>true</default>
                    <label>Proactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <description>Please enter a date until the optimizing version is valid.</description>
        <inlineHelpText>Please enter a date until the optimizing version is valid.</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adv_AvailabilityApproved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>KV 2460: Wird im Process der Optimierungsaktivierung benötigt.
KV 3842: Default value auf TRUE gesetzt.</description>
        <label>Genehmigt Verfügbarkeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_DeltaMN2Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>KV 2460: Wird im Process der Optimierungsaktivierung benötigt. 
KV 3634: Default Value auf true gesetzt.</description>
        <label>Genehmigt Umsatzdifferenz MN2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adv_LastAvailabilityCheck__c</fullName>
        <label>Letzte Verfügbarkeitsabfrage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adv_LastUpdateReichweitenRelevanz__c</fullName>
        <description>KV 02554. Hilfsfeld, in welches der Maximale Wert aus dem Feld &quot;Zuletzt geändert am&quot; am Unterobjekt Optimierungsänderung kommt. Wird für den Process benötigt, der die Checkbox &quot;Genehmigung Verfügbarkeit&quot; auf der Optimierung abwählt.</description>
        <label>Adv_LastUpdateReichweitenRelevanz</label>
        <summarizedField>ADvendio__OptimizingChange__c.LastModifiedDate</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__OptimizingChange__c.Adv_ReichweitenRelevant__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__OptimizingChange__c.ADvendio__OptimizingVersion__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_ActivationStarting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KV: 1371. Hilfsfeld: Checkbox welche sofort bei Knopfdruck (Activate) gesetzt wird, damit die Optimierungsversion nicht durch einen Trigger gelöscht wird, der Optimierungsversionen löscht, die noch nicht aktiviert sind.</description>
        <label>ActivationStarting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Versionsnummer__c</fullName>
        <description>KV: 02462. Versionsnummer für den Optimierungsvorschlag</description>
        <formula>&quot;OV_&quot; &amp; ADvendio__MediaCampaign__r.ADvendio__Offer_Number__c &amp; &quot;_&quot; &amp; IF(DAY(DATEVALUE(LastModifiedDate+(1/12))) &lt; 10, &quot;0&quot; + TEXT(DAY(DATEVALUE(LastModifiedDate+(1/12)))), TEXT(DAY(DATEVALUE(LastModifiedDate+(1/12))))) &amp; &quot;.&quot; &amp; IF(MONTH(DATEVALUE(LastModifiedDate+(1/12))) &lt; 10, &quot;0&quot; + TEXT(MONTH(DATEVALUE(LastModifiedDate+(1/12)))), TEXT(MONTH(DATEVALUE(LastModifiedDate+(1/12))))) &amp; &quot;.&quot; &amp; TEXT(YEAR(DATEVALUE(LastModifiedDate+(1/12)))) &amp; &quot;_&quot; &amp; MID(TEXT(LastModifiedDate+(1/24)), 12, 5) &amp; &quot;_&quot; &amp; ADvendio__MediaCampaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versionsnummer</label>
        <type>Text</type>
    </fields>
    <label>Optimizing Version</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__DateOfActivation__c</columns>
        <columns>ADvendio__MediaCampaign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Optimization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optimizing Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>